Update Index File

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
         <div class="row">
             <div class="w-100 d-flex flex-column flex-lg-row">
                 <div class="side_i">
-                    <h1 class="display-4">Design</h1>
+                    <h1>Design</h1>
                     <h2>with</h2>
-                    <h2 class="display-4">Love</h2>
-                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae incidunt sit natus iusto possimus quasi, maiores accusantium! Quo animi asperiores nesciunt quos laborum ipsa dolores totam iusto quisquam assumenda! Et!</p>
+                    <h2>Love</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae incidunt sit natus iusto possimus quasi, maiores accusantium! Quo animi asperiores nesciunt quos laborum ipsa dolores totam iusto quisquam assumenda! Et!</p>
                 </div>
                 <div class="side_ii d-flex">
                     <div class="mr-auto d-flex">
                         <h2 >PERFECT</h2>
-                        <h1 class="display-5">DESIGN</h1>
+                        <h1>DESIGN</h1>
                     </div>
-                    <div class="ml-auto imh-holder">
-                        <img src="assets/shot-by-cerqueira-cHY_urj0ePE-unsplash.png"  width="100%"alt="">
+                    <div class="ml-auto imh-holder d-flex justify-content-end ">
+                        <!-- <img src="assets/shot-by-cerqueira-cHY_urj0ePE-unsplash.png"  width="80%" alt=""> -->
                     </div>
                 </div>
             </div>
