--- a/about.html
+++ b/about.html
@@ -56,32 +56,42 @@
     </nav>
     <section class="container-fluid">
         <div class="row">
-            <div class="about px-5 d-flex flex-column align-items-center justify-content-center">
-                <h1 class="text-light">Let's Make every Thing Clear!</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit facilis ipsa reprehenderit ipsum, ipsam enim voluptate vel, alias cumque temporibus, officia vitae nesciunt corrupti doloribus repellat itaque numquam ut cupiditate?</p>
+            <div class="about-holder-main w-100 d-flex flex-column align-items-center">
+                <div class="w-100 about px-5 d-flex flex-column align-items-center justify-content-center">
+                    <h1 class="text-light mt-4">Let's Make every Thing Clear!</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit facilis ipsa reprehenderit ipsum, ipsam enim voluptate vel, alias cumque temporibus, officia vitae nesciunt corrupti doloribus repellat itaque numquam ut cupiditate?</p>
+                </div>
+                <div class="w-100 d-flex align-items-center justify-content-center">
+                    <img src="assets/about.gif" width="70%" alt="">
+                </div>
             </div>
         </div>
     </section>
     <section class="container-fluid self-a"> 
-        <div class="row d-flex flex-column align-items-center">
-            <div class="m-img ">
-                
+        <div class="row ">
+            <div class=" self-a-inner d-flex flex-column align-items-center justify-content-center">
+                <div class=" w-100 d-flex align-items-center justify-content-center " style="overflow: hidden;">
+                    <div class="m-img">
+
+                    </div>
+                </div>
+                <div class=" w-100 m-about  text-white mt-5 d-flex flex-column  align-items-start">
+                    <h2 class="px-3">Atiqullah Sadeqi</h2>
+                    <p class="mb-4 px-3">Web Developer</p>
+                    <p class="px-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium debitis dignissimos animi. Dolores doloribus, deleniti quia beatae repudiandae dicta suscipit praesentium quam quo vitae, amet modi illum quae delectus vero!</p>
+                </div>
             </div>
-            <div class="m-about px-5 text-white mt-5">
-                <h2>Atiqullah Sadeqi</h2>
-                <p class="mb-4">Web Developer</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium debitis dignissimos animi. Dolores doloribus, deleniti quia beatae repudiandae dicta suscipit praesentium quam quo vitae, amet modi illum quae delectus vero!</p>
-            </div>
+            
         </div>
     </section> 
-    <section class="container-fluid project mt-5">
+    <section class="container-fluid about-p project mt-5">
         <div class="row">
-            <div class="bg_style text-light">
-                <div>
+            <div class="bg_style text-light py-4">
+                <div class="px-5">
                     <h2 class="mx-3 mt-4">Projects Have Done</h2>
                 </div>
-                <div class="mt-4 px-3">
-                    <h5 >Watch all projects <a href="" class="link">Here</a></h5>
+                <div class="mt-4 px-5">
+                    <h5 class="mx-3 ">Watch all projects <a href="" class="link">Here</a></h5>
                 </div>
                 <div class="project_slide owl-theme ">
                     <div class="project_post my-5">
