--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             <div class="bg_style text-light">
                 <div class="mx-3 mt-4 px-5">
                     <h2 class="">Perfect Design Blog</h2>
-                </div c>
+                </div >
+         
                 <div class="blog_slide owl-theme ">
                     <div class="item blog_post mt-5 mb-5">
                         <div class="post_img">
