--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="contact-main w-100">
+                <div class="contact-main w-100 d-flex align-items-end justify-content-center">
                     <div class="contact-form ">
                         <form action="/action_page.php" class="needs-validation p-3 d-flexflex-column align-content-center h-100" novalidate class="">
                             <h3 class="text-light mt-3 mb-2">Let's Get In Touch</h3>
