--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
                     <h1 class="text-light mt-4">Let's Make every Thing Clear!</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit facilis ipsa reprehenderit ipsum, ipsam enim voluptate vel, alias cumque temporibus, officia vitae nesciunt corrupti doloribus repellat itaque numquam ut cupiditate?</p>
                 </div>
-                <div class="w-100 d-flex align-items-center justify-content-center">
-                    <img src="assets/about.gif" width="70%" alt="">
+                <div class="w-100 mt-5 d-flex align-items-center justify-content-center">
+                    <img src="assets/about.gif" width="70%" class="mt-3" alt="">
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="row">
             <div class="bg_style text-light py-4">
                 <div class="px-5">
-                    <h2 class="mx-3 mt-4">Projects Have Done</h2>
+                    <h3 class="mx-3 mt-4">Projects Have Done</h3>
                 </div>
                 <div class="mt-4 px-5">
                     <h5 class="mx-3 ">Watch all projects <a href="" class="link">Here</a></h5>
