--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="bg_style text-light">
                 <div class="mx-3 mt-4 px-5">
-                    <h2 class="">Perfect Design Blog</h2>
+                    <h3 class="">Perfect Design Blog</h3>
                 </div >
          
                 <div class="blog_slide owl-theme ">
@@ -189,14 +189,14 @@
             <h4 class="px-5">Watch all blog Post <a href="" class="link">Here</a></h4>
         </div>
     </section>
-    <section class="container-fluid project mt-5">
+    <section class="container-fluid about-p project mt-5">
         <div class="row">
-            <div class="bg_style text-light">
-                <div>
-                    <h2 class="mx-3 mt-4">Projects Have Done</h2>
+            <div class="bg_style text-light py-4">
+                <div class="px-5">
+                    <h3 class="mx-3 mt-4">Projects Have Done</h3>
                 </div>
-                <div class="mt-4 px-3">
-                    <h5 >Watch all projects <a href="" class="link">Here</a></h5>
+                <div class="mt-4 px-5">
+                    <h5 class="mx-3 ">Watch all projects <a href="" class="link">Here</a></h5>
                 </div>
                 <div class="project_slide owl-theme ">
                     <div class="project_post my-5">
